# seselik-backend

./: .env.dist  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/auth/api/: auth_router.py
app/auth/api/v1/: auth_controller.py
app/auth/domain/exceptions/: auth_exception.py
app/auth/domain/requests/: login_request.py
app/auth/services/: auth_service.py
app/auth/use_cases/: auth_use_case.py
app/customer/api/: customer_router.py
app/customer/api/v1/: card_payment_controller.py  customer_controller.py  customer_documentation.py  ship_address_controller.py
app/customer/services/: card_payment_service.py  customer_service.py  ship_address_service.py
app/customer/use_cases/: card_payment_use_case.py  customer_use_case.py  customer_use_cases.py  ship_address_use_case.py
app/domain/exceptions/: service_exception.py
app/entities/enums/: api_status.py
app/entities/exceptions/: service_exception.py
app/entities/responses/: api_response.py
app/healthcheck/api/: healthcheck_router.py
app/infraestructure/: database.py  database_settings.py
app/product/api/: product_router.py
app/product/services/: product_service.py  product_status_service.py
app/product/use_cases/: product_status_use_case.py  product_use_case.py
app/security/: auth_handler.py  claims.py  jwt.py  roles_config.py  security_settings.py
tests/: conftest.py
tests/customer/mocks/: create_customer_request_mock.py  customer_model_mock.py
tests/customer/services/: test_customer_service.py
tests/customer/use_cases/: test_customer_use_case.py
(+30 files in other folders)
